--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.example</groupId>
     <artifactId>spring-skeleton</artifactId>
     <name>Spring Flow Application Skeleton</name>
-    <version>0.1.18</version>
+    <version>1.0.0.alpha6</version>
     <packaging>war</packaging>
 
     <properties>
@@ -16,19 +16,21 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
         <!-- Dependencies -->
+        <vaadin.project.version>10.0.0.alpha3</vaadin.project.version>
         <servlet.api.version>3.1.0</servlet.api.version>
         <selenium.server.version>3.4.0</selenium.server.version>
+        <flow.project.version>1.0.0.alpha6</flow.project.version>
 
         <!-- Plugins -->
-        <frontend.maven.plugin.version>1.4</frontend.maven.plugin.version>
+        <frontend.maven.plugin.version>1.5</frontend.maven.plugin.version>
         <maven.clean.plugin.version>3.0.0</maven.clean.plugin.version>
+        <maven.war.plugin.version>3.1.0</maven.war.plugin.version>
 
         <!-- Frontend -->
         <node.version>v7.10.0</node.version>
         <npm.version>5.0.3</npm.version>
 
         <frontend.working.directory>src/main/resources/META-INF/resources/frontend</frontend.working.directory>
-        <flow.project.version>1.0-SNAPSHOT</flow.project.version>
     </properties>
 
     <repositories>
@@ -41,9 +43,32 @@
             <id>vaadin-addons</id>
             <url>http://maven.vaadin.com/vaadin-addons</url>
         </repository>
+        
+        <repository>
+            <id>webjars</id>
+            <url>https://dl.bintray.com/webjars/maven</url>
+        </repository>
     </repositories>
+    
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-webjars-bom</artifactId>
+                <type>pom</type>
+                <scope>import</scope>
+                <version>${flow.project.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin</artifactId>
+            <version>${vaadin.project.version}</version>
+        </dependency>
+    
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>flow-spring-boot-starter</artifactId>
@@ -91,6 +116,25 @@
                             <directory>${frontend.working.directory}/node_modules</directory>
                         </fileset>
                     </filesets>
+                </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>${maven.war.plugin.version}</version>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Implementation-Title>${project.name}
+                            </Implementation-Title>
+                            <Implementation-Version>${project.version}
+                            </Implementation-Version>
+                        </manifestEntries>
+                    </archive>
+                    <warSourceExcludes>
+                        **/node_modules/,**/node/,**/build/,**/etc/
+                    </warSourceExcludes>
                 </configuration>
             </plugin>
 
@@ -151,7 +195,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-war-plugin</artifactId>
-                        <version>3.0.0</version>
+                        <version>${maven.war.plugin.version}</version>
                         <configuration>
                            <webResources>
                                 <resource>
@@ -167,39 +211,5 @@
             </build>
         </profile>
 
-        <profile>
-            <id>debugMode</id>
-            <activation>
-                <property>
-                    <name>!vaadin.productionMode</name>
-                </property>
-            </activation>
-
-            <properties>
-                <npm.build.goal>run devMode</npm.build.goal>
-            </properties>
-
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-war-plugin</artifactId>
-                        <version>3.0.0</version>
-                        <configuration>
-                            <webResources>
-                                <resource>
-                                    <directory>${frontend.working.directory}</directory>
-                                    <excludes>
-                                        <exclude>build/**</exclude>
-                                    </excludes>
-                                </resource>
-                            </webResources>
-                            <packagingExcludes>**/node_modules/,**/node/,**/etc/,**/bower.json,**/package.json
-                            </packagingExcludes>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
     </profiles>
 </project>
