--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
         <!-- Frontend -->
         <node.version>v7.10.0</node.version>
         <npm.version>5.0.3</npm.version>
+        
+        <spring-boot.version>1.5.8.RELEASE</spring-boot.version>
 
         <frontend.working.directory>src/main/resources/META-INF/resources/frontend</frontend.working.directory>
     </properties>
@@ -76,6 +78,25 @@
         </dependency>
         
         <dependency>
+            <!-- 
+                 Spring dev tools dependency is not needed for production. 
+                 It allows to speed up the development and may be used 
+                 during development.
+                 E.g. it automatically restarts application whenever files 
+                 on the classpath change.
+                 To be able to make it work properly with Flow there is 
+                 META-INF/spring-devtools.proeprties file which might need 
+                 to be adjusted for your specific purposes. 
+                 See https://docs.spring.io/spring-boot/docs/current/reference/html/using-boot-devtools.html#using-boot-devtools-customizing-classload
+                 for details. 
+            -->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>${spring-boot.version}</version>
+            <optional>true</optional>
+        </dependency>
+        
+        <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>flow-components</artifactId>
             <version>${flow.project.version}</version>
@@ -95,7 +116,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>1.5.7.RELEASE</version>
+                <version>${spring-boot.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
