--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,10 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
         <!-- Dependencies -->
-        <vaadin.project.version>10.0.0-alpha6</vaadin.project.version>
+        <vaadin.project.version>10.0.0-alpha8</vaadin.project.version>
         <servlet.api.version>3.1.0</servlet.api.version>
         <selenium.server.version>3.4.0</selenium.server.version>
-        <flow.project.version>1.0.0.alpha10</flow.project.version>
+        <flow.project.version>1.0.0.alpha11</flow.project.version>
 
         <!-- Plugins -->
         <frontend.maven.plugin.version>1.5</frontend.maven.plugin.version>
@@ -76,18 +76,17 @@
             <artifactId>flow-spring-boot-starter</artifactId>
             <version>${flow.project.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <version>${spring-boot.version}</version>
             <optional>true</optional>
         </dependency>
-        
+
         <dependency>
-            <groupId>com.vaadin</groupId>
-            <artifactId>flow-components</artifactId>
-            <version>${flow.project.version}</version>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>polymer</artifactId>
         </dependency>
 
         <dependency>
