--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,8 @@
 
     <repositories>
         <repository>
-            <id>flow</id>
-            <url>https://maven.vaadin.com/vaadin-prerelease</url>
+            <id>vaadin-prereleases</id>
+            <url>https://maven.vaadin.com/vaadin-prereleases</url>
         </repository>
 
         <repository>
