Update platform version and exclude flow-server dependency from it (#15)
* Update platform version and exclude flow-server dependency from it

* Use spring add on  version from the platform bom.

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
         <!-- Dependencies -->
-        <vaadin.project.version>10.0.0-alpha6</vaadin.project.version>
+        <vaadin.project.version>10.0.0.alpha7</vaadin.project.version>
         <servlet.api.version>3.1.0</servlet.api.version>
         <selenium.server.version>3.4.0</selenium.server.version>
         <flow.project.version>1.0.0.alpha10</flow.project.version>
@@ -61,6 +61,13 @@
                 <scope>import</scope>
                 <version>${flow.project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-bom</artifactId>
+                <version>${vaadin.project.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -74,7 +81,6 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>flow-spring-boot-starter</artifactId>
-            <version>${flow.project.version}</version>
         </dependency>
         
         <dependency>
@@ -87,7 +93,6 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>flow-components</artifactId>
-            <version>${flow.project.version}</version>
         </dependency>
 
         <dependency>
