--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.example</groupId>
     <artifactId>spring-skeleton</artifactId>
     <name>Spring Flow Application Skeleton</name>
-    <version>1.0.0.alpha10</version>
+    <version>1.0.0.alpha11</version>
     <packaging>war</packaging>
 
     <properties>
@@ -16,10 +16,11 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
         <!-- Dependencies -->
-        <vaadin.project.version>10.0.0.alpha7</vaadin.project.version>
+
+        <vaadin.project.version>10.0.0.alpha8</vaadin.project.version>
         <servlet.api.version>3.1.0</servlet.api.version>
         <selenium.server.version>3.4.0</selenium.server.version>
-        <flow.project.version>1.0.0.alpha10</flow.project.version>
+        <flow.project.version>1.0.0.alpha11</flow.project.version>
 
         <!-- Plugins -->
         <frontend.maven.plugin.version>1.5</frontend.maven.plugin.version>
@@ -37,7 +38,12 @@
 
     <repositories>
         <repository>
-            <id>flow-internal-release</id>
+            <id>vaadin-prereleases</id>
+            <url>https://maven.vaadin.com/vaadin-prereleases</url>
+        </repository>
+
+        <repository>
+            <id>vaadin-platform</id>
             <url>https://repo.vaadin.com/nexus/content/repositories/flow</url>
         </repository>
 
@@ -82,17 +88,17 @@
             <groupId>com.vaadin</groupId>
             <artifactId>flow-spring-boot-starter</artifactId>
         </dependency>
-        
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <version>${spring-boot.version}</version>
             <optional>true</optional>
         </dependency>
-        
+
         <dependency>
-            <groupId>com.vaadin</groupId>
-            <artifactId>flow-components</artifactId>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>polymer</artifactId>
         </dependency>
 
         <dependency>
