Update plafrorm version.

--- a/pom.xml
+++ b/pom.xml
@@ -15,20 +15,13 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
+        <webapp.directory>src/main/webapp</webapp.directory>
+
         <!-- Dependencies -->
-        <vaadin.version>10.0.0.alpha14</vaadin.version>
-        <servlet.api.version>3.1.0</servlet.api.version>
-        <selenium.server.version>3.4.0</selenium.server.version>
-        <slf4j.version>1.7.25</slf4j.version>
-
-        <maven.resources.plugin.version>3.0.2</maven.resources.plugin.version>
-        <maven.clean.plugin.version>3.0.0</maven.clean.plugin.version>
-        <maven.war.plugin.version>3.1.0</maven.war.plugin.version>
-
-        <frontend.directory>src/main/webapp/frontend</frontend.directory>
-
+        <vaadin.version>10.0.0.alpha18</vaadin.version>
         <spring-boot.version>2.0.0.M7</spring-boot.version>
     </properties>
+
     <pluginRepositories>
         <pluginRepository>
             <id>spring-milestone</id>
@@ -39,19 +32,11 @@
             <url>https://maven.vaadin.com/vaadin-prereleases</url>
         </pluginRepository>
     </pluginRepositories>
+
     <repositories>
         <repository>
             <id>vaadin-prereleases</id>
             <url>https://maven.vaadin.com/vaadin-prereleases</url>
-        </repository>
-        <repository>
-            <id>vaadin-addons</id>
-            <url>http://maven.vaadin.com/vaadin-addons</url>
-        </repository>
-
-        <repository>
-            <id>webjars</id>
-            <url>https://dl.bintray.com/webjars/maven</url>
         </repository>
         <repository>
             <id>spring-milestone</id>
@@ -93,16 +78,11 @@
             <version>${spring-boot.version}</version>
             <optional>true</optional>
         </dependency>
-        
-        <dependency>
-            <groupId>org.webjars.bower</groupId>
-            <artifactId>polymer</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>${servlet.api.version}</version>
+            <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
         <!-- Fix version conflicts between various dependencies -->
@@ -119,7 +99,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.9.0</version>
+            <version>2.9.2</version>
         </dependency>
 
         <!-- Added to provide logging output as Flow uses -->
@@ -127,9 +107,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>${slf4j.version}</version>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -137,18 +115,8 @@
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-clean-plugin</artifactId>
-                    <version>${maven.clean.plugin.version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>${maven.resources.plugin.version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-war-plugin</artifactId>
-                    <version>${maven.war.plugin.version}</version>
+                    <version>3.1.0</version>
                     <configuration>
                         <packagingExcludes>
                             %regex[WEB-INF/lib/slf4j-simple.*.jar],
@@ -158,22 +126,25 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
+                <version>3.0.0</version>
                 <configuration>
                     <filesets>
                         <fileset>
-                            <directory>${frontend.directory}/build</directory>
+                            <directory>${webapp.directory}/frontend-es5</directory>
                         </fileset>
                         <fileset>
-                            <directory>${frontend.directory}/bower_components</directory>
+                            <directory>${webapp.directory}/frontend-es6</directory>
                         </fileset>
                     </filesets>
                 </configuration>
@@ -190,10 +161,6 @@
                 </property>
             </activation>
 
-            <properties>
-                <transpilation.output>${project.build.directory}/build</transpilation.output>
-            </properties>
-
             <dependencies>
                 <dependency>
                     <groupId>com.vaadin</groupId>
@@ -206,39 +173,28 @@
                     <plugin>
                         <groupId>com.vaadin</groupId>
                         <artifactId>flow-maven-plugin</artifactId>
-                        <version>1.0.0.alpha18</version>
+                        <version>1.0.0.alpha20</version>
                         <executions>
                             <execution>
                                 <goals>
                                     <goal>copy-production-files</goal>
-                                    <goal>transpile-production-files</goal>
+                                    <goal>package-for-production</goal>
                                 </goals>
                                 <configuration>
-                                    <transpileOutputDirectory>${transpilation.output}</transpileOutputDirectory>
+                                    <transpileOutputDirectory>${webapp.directory}</transpileOutputDirectory>
                                 </configuration>
                             </execution>
                         </executions>
                     </plugin>
 
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-war-plugin</artifactId>
-                        <version>${maven.war.plugin.version}</version>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <version>${spring-boot.version}</version>
                         <configuration>
-                            <archive>
-                                <manifestEntries>
-                                    <Implementation-Title>${project.name}</Implementation-Title>
-                                    <Implementation-Version>${project.version}</Implementation-Version>
-                                </manifestEntries>
-                            </archive>
-                            <webResources>
-                                <resource>
-                                    <directory>${transpilation.output}</directory>
-                                </resource>
-                            </webResources>
+                            <jvmArguments>-Dvaadin.productionMode</jvmArguments>
                         </configuration>
                     </plugin>
-
                 </plugins>
             </build>
         </profile>
