--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
 /target/
 .idea/
-bower_components/
-node/
-node_modules/
-etc/
 .settings
 .project
 .classpath
-
+/src/main/webapp/frontend-es*/
 
 *.iml
 .DS_Store
