--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
         <!-- Dependencies -->
         <vaadin.version>10.0.0.alpha21</vaadin.version>
-        <spring-boot.version>2.0.0.M7</spring-boot.version>
+        <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
     </properties>
 
     <pluginRepositories>
