--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,6 @@
         <!-- Dependencies -->
         <vaadin.version>10.0.0.beta10</vaadin.version>
         <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
-        <flow.maven.plugin.version>1.0.0.beta10</flow.maven.plugin.version>
     </properties>
 
     <pluginRepositories>
@@ -155,8 +154,8 @@
                 <plugins>
                     <plugin>
                         <groupId>com.vaadin</groupId>
-                        <artifactId>flow-maven-plugin</artifactId>
-                        <version>${flow.maven.plugin.version}</version>
+                        <artifactId>vaadin-maven-plugin</artifactId>
+                        <version>${vaadin.version}</version>
                         <executions>
                             <execution>
                                 <goals>
