--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-spring-boot-starter</artifactId>
+            <version>${vaadin.version}</version>
         </dependency>
         
         <dependency>
