Update platform dependency to beta11 (#70)
* Update pom.xml

* Update pom.xml

* remove the spaces

* Add vaadin-spring dependency

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <webapp.directory>src/main/webapp</webapp.directory>
 
         <!-- Dependencies -->
-        <vaadin.version>10.0.0.beta10</vaadin.version>
+        <vaadin.version>10.0.0.beta11</vaadin.version>
         <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
     </properties>
 
@@ -76,8 +76,14 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-spring-boot-starter</artifactId>
+            <version>${vaadin.version}</version>
         </dependency>
         
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-spring</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
