--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <webapp.directory>src/main/webapp</webapp.directory>
 
         <!-- Dependencies -->
-        <vaadin.version>10.0.0.beta11</vaadin.version>
+        <vaadin.version>10.0.0.rc1</vaadin.version>
         <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
     </properties>
 
